--- a/nosotros.html
+++ b/nosotros.html
@@ -4,21 +4,24 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Kotomitl</title>
+    <title>Acerca de Nosotros</title>
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/main.css">
+    <link href="../assets/dist/css/bootstrap.min.css" rel="stylesheet">
+
+    <link rel="stylesheet" href="/css/main.css">
 </head>
 
+
 <body>
-
-
-    <div class="Barra">
+    <!-- ================= NAVBAR ============== -->
+    <header>
         <nav class="navbar navbar-expand-lg custom-navbar" aria-label="Fifth navbar example">
             <div class="container-fluid ">
                 <a class="navbar-brand " href="#"><img src="src/img/komitl.png" alt="Kotomitl"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#navbarsExample05" aria-controls="navbarsExample05" aria-expanded="false"
+                    data-bs-target="#navbarsExample05" aria-controls="navbarsExample05" aria-expanded="true"
                     aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -70,12 +73,150 @@
                     </div>
                 </div>
         </nav>
-    </div>
+        </div>
+    </header>
+
+    <!-- ================= CONTENIDO ============== -->
+    <main>
+        <section class="container">
+            <div class="title">
+                <h1>Sobre este proyecto</h1>
+            </div>
+            <!-- ============= Resumen del proyecto ================ -->
+            <div class="card">
+                <div class="card-body">
+                    El proyecto trata acerca de la elaboración de un e-commerce enfocado a la venta de prendas
+                    antesanales encocafa a hombres, mujeres y niños.
+                </div>
+            </div>
+            <!-- ========== contenedor de biografías =========== -->
+            <div class="container">
+
+                <!-- AlexisSanchez -->
+                <div class="row row-cols-1 row-cols-sm-2 row-cols-md-2 g-2">
+                    <div class="card mb-3" style="max-width:calc(50% - 2rem); margin: 1.5rem 1rem 0 1rem">
+                        <div class="row g-0">
+                            <div class="col-md-4">
+                                <img src="src/img/nosotros/AlexisSanchez.jpeg" style="width: 210px; height: 210px;"
+                                    class="img-fluid rounded" alt="...">
+                            </div>
+                            <div class="col-md-8">
+                                <div class="card-body">
+                                    <h5 class="card-title">Alexis Sánchez León</h5>
+                                    <p class="card-text">Desarrollador Java | Ing. Industrial</p>
+                                    <p class="card-text">Soy un desarrollador Java, enfocado en el frontend y en la
+                                        gestión de proyectos.
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
 
 
+                    <!-- BryanMartinez -->
+                    <div class="card mb-3" style="max-width: calc(50% - 2rem); margin: 1.5rem 1rem 0 1rem;">
+                        <div class="row g-0">
+                            <div class="col-md-8">
+                                <div class="card-body">
+                                    <h5 class="card-title">Bryan Alexis Martínez Alvarado</h5>
+                                    <p class="card-text">Desarrollador Java | Ing. en Sistemas Computacionales.</p>
+                                    <p class="card-text">Apasionado por la tecnología y por el desarrollo de software.</p>
+                                </div>
+                            </div>
+                            <div class="col-md-4">
+                                <img src="src/img/nosotros/BryanMartinez.jpeg" style="width: 210px; height: 210px;"
+                                    class="img-fluid rounded" alt="...">
+                            </div>
+                        </div>
+                    </div>
+
+
+                    <!-- JuanCarlosBernal -->
+                    <div class="card mb-3" style="max-width:calc(50% - 2rem); margin: 1.5rem 1rem 0 1rem">
+                        <div class="row g-0">
+                            <div class="col-md-4">
+                                <img src="src/img/nosotros/JuanCarlos.jpeg" style="width: 210px; height: 210px;"
+                                    class="img-fluid rounded" alt="...">
+                            </div>
+                            <div class="col-md-8">
+                                <div class="card-body">
+                                    <h5 class="card-title">Carlos Bernal</h5>
+                                    <p class="card-text">Desarrollador Java Fullstack</p>
+                                    <p class="card-text">Entusiasta por la tecnología y apasionado por la programación,
+                                        me gusta la
+                                        resolución de problemas y participar activamente del trabajo en equipo.</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+
+                    <!-- IgnacioZepeda -->
+                    <div class="card mb-3" style="max-width: calc(50% - 2rem); margin: 1.5rem 1rem 0 1rem;">
+                        <div class="row g-0">
+                            <div class="col-md-8">
+                                <div class="card-body">
+                                    <h5 class="card-title">Ignacio Zepeda</h5>
+                                    <p class="card-text">Full Stack Java Developer Jr | Data Analyst | Ing. Ambiental
+                                    </p>
+                                    <p class="card-text">Apasionado por la optimización y automatización de procesos con
+                                        ayuda de la tecnología en conjunto a herramientas de gestión de procesos</p>
+                                </div>
+                            </div>
+                            <div class="col-md-4">
+                                <img src="src/img/nosotros/CarlosZepeda.jpeg" style="width: 210px; height: 210px;"
+                                    class="img-fluid rounded" alt="...">
+                            </div>
+                        </div>
+                    </div>
+
+
+                    <!-- LuisCruz -->
+                    <div class="card mb-3" style="max-width:calc(50% - 2rem); margin: 1.5rem 1rem 0 1rem">
+                        <div class="row g-0">
+                            <div class="col-md-4">
+                                <img src="src/img/nosotros/JuanAristeo.jpeg" style="width: 210px; height: 210px;"
+                                    class="img-fluid rounded" alt="...">
+                            </div>
+                            <div class="col-md-8">
+                                <div class="card-body">
+                                    <h5 class="card-title">Juan Luis Cruz Aristeo</h5>
+                                    <p class="card-text">Desarrollador Java | Ing. Mecatrónico.</p>
+
+                                    <p class="card-text">Un ingeniero apasionado por la tecnología enfocado en la
+                                        programación con
+                                        habilidades en dirección de proyectos.</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+
+                    <!-- RobertoRivas -->
+                    <div class="card mb-3" style="max-width: calc(50% - 2rem); margin: 1.5rem 1rem 0 1rem;">
+                        <div class="row g-0">
+                            <div class="col-md-8">
+                                <div class="card-body">
+                                    <h5 class="card-title">Roberto Alexis Rivas Monzón</h5>
+                                    <p class="card-text">Desarrollador Java | Ing. Biomédico.</p>
+
+                                    <p class="card-text">Un soñador bohemio e ingeniero enfocado al backend</p>
+                                </div>
+                            </div>
+                            <div class="col-md-4">
+                                <img src="src/img/nosotros/RobertoRivas.jpeg" style="width: 210px; height: 210px;"
+                                    class="img-fluid rounded" alt="...">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
 
 
     <!--FOOTER-->
+
     <div class="footerFinal" id="footer">
         <footer class="footerFinal col-md-5 offset-md-5">
             <ul class="footerFinal col-md-4 justify-content-center list-unstyled d-flex">
@@ -89,6 +230,12 @@
         </footer>
     </div>
     <!--FOOTER-->
+
+
+    <!--Funcionalidad Menu de Hamburguesa-->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
