Se modifican cards para hacerlas responsive. Se cambia el resumen, biografías y tipos de letra. Se añade efecto shadow sobre cards

--- a/nosotros.html
+++ b/nosotros.html
@@ -94,7 +94,7 @@
 
                 <!-- AlexisSanchez -->
                 <div class="row row-cols-1 row-cols-sm-2 row-cols-md-2 g-2">
-                    <div class="card mb-3" style="max-width:calc(50% - 2rem); margin: 1.5rem 1rem 0 1rem">
+                    <div class="card card__team mb-3" style="max-width:calc(50% - 2rem); margin: 1.5rem 1rem 0 1rem">
                         <div class="row g-0">
                             <div class="col-md-4">
                                 <img src="src/img/nosotros/AlexisSanchez.jpeg" style="width: 210px; height: 210px;"
@@ -114,7 +114,7 @@
 
 
                     <!-- BryanMartinez -->
-                    <div class="card mb-3" style="max-width: calc(50% - 2rem); margin: 1.5rem 1rem 0 1rem;">
+                    <div class="card card__team mb-3" style="max-width: calc(50% - 2rem); margin: 1.5rem 1rem 0 1rem;">
                         <div class="row g-0">
                             <div class="col-md-8">
                                 <div class="card-body">
@@ -132,7 +132,7 @@
 
 
                     <!-- JuanCarlosBernal -->
-                    <div class="card mb-3" style="max-width:calc(50% - 2rem); margin: 1.5rem 1rem 0 1rem">
+                    <div class="card card__team mb-3" style="max-width:calc(50% - 2rem); margin: 1.5rem 1rem 0 1rem">
                         <div class="row g-0">
                             <div class="col-md-4">
                                 <img src="src/img/nosotros/JuanCarlos.jpeg" style="width: 210px; height: 210px;"
@@ -152,7 +152,7 @@
 
 
                     <!-- IgnacioZepeda -->
-                    <div class="card mb-3" style="max-width: calc(50% - 2rem); margin: 1.5rem 1rem 0 1rem;">
+                    <div class="card card__team mb-3" style="max-width: calc(50% - 2rem); margin: 1.5rem 1rem 0 1rem;">
                         <div class="row g-0">
                             <div class="col-md-8">
                                 <div class="card-body">
@@ -172,7 +172,7 @@
 
 
                     <!-- LuisCruz -->
-                    <div class="card mb-3" style="max-width:calc(50% - 2rem); margin: 1.5rem 1rem 0 1rem">
+                    <div class="card card__team mb-3" style="max-width:calc(50% - 2rem); margin: 1.5rem 1rem 0 1rem">
                         <div class="row g-0">
                             <div class="col-md-4">
                                 <img src="src/img/nosotros/JuanAristeo.jpeg" style="width: 210px; height: 210px;"
@@ -193,7 +193,7 @@
 
 
                     <!-- RobertoRivas -->
-                    <div class="card mb-3" style="max-width: calc(50% - 2rem); margin: 1.5rem 1rem 0 1rem;">
+                    <div class="card card__team mb-3" style="max-width: calc(50% - 2rem); margin: 1.5rem 1rem 0 1rem;">
                         <div class="row g-0">
                             <div class="col-md-8">
                                 <div class="card-body">
