--- a/nosotros.html
+++ b/nosotros.html
@@ -12,8 +12,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Georama&family=Koulen&display=swap" rel="stylesheet">
-
-    <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="./css/main.css">
 </head>
 
 
@@ -22,7 +21,7 @@
     <header>
         <nav class="navbar navbar-expand-lg custom-navbar" aria-label="Fifth navbar example">
             <div class="container-fluid ">
-                <a class="navbar-brand " href="#"><img src="src/img/komitl.png" alt="Kotomitl"></a>
+                <a class="navbar-brand " href="#"><img src="./src/img/logos/komitl.png" alt="Kotomitl"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarsExample05" aria-controls="navbarsExample05" aria-expanded="true"
                     aria-label="Toggle navigation">
@@ -44,7 +43,7 @@
                             </ul>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="nosotros.html">Nosotros</a>
+                            <a class="nav-link" href="./nosotros.html">Nosotros</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">Contacto</a>
@@ -53,21 +52,20 @@
                     <div class="iconoSuperior">
                         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                             <li class="nav-item">
-                                <a class="nav-link" href="#"><img src="./src/img/IconoUsuario.png" alt="IconoFavoritos"
-                                        width="35px" height="35px"></a>
+                                <a class="nav-link" href="#"><img src="./src/img/logos/IconoUsuario.png"
+                                        alt="IconoUsuario" width="35px" height="35px"></a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#"><img src="./src/img/iconoBusqueda.png" alt="IconoFavoritos"
-                                        width="35px" height="35px"></a>
+                                <a class="nav-link" href="#"><img src="./src/img/logos/iconoBusqueda.png"
+                                        alt="iconoBusqueda" width="35px" height="35px"></a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#"><img
-                                        src="./src/img/355975143_3548977942008404_418408633204294155_n (1)(2).png"
-                                        alt="IconoFavoritos" width="35px" height="35px"></a>
+                                <a class="nav-link" href="#"><img src="./src/img/logos/corazonLogo.png"
+                                        alt="corazonLogo" width="35px" height="35px"></a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#"><img src="./src/img/IconoCarrito.png" alt="IconoFavoritos"
-                                        width="35px" height="35px"></a>
+                                <a class="nav-link" href="#"><img src="./src/img/logos/IconoCarrito.png"
+                                        alt="IconoCarrito" width="35px" height="35px"></a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="#"><strong>0/MXN</strong></a>
@@ -90,9 +88,12 @@
                 <div class="card-body">
                     <p>Este proyecto es un e-commerce enfocado a la venta de vestimenta para personas con gusto y
                         apreciación de lo artesanal.</p>
-                    <p>Su desarrollo se dio durante el bootcamp de Generation Mexico para convertinos en Desarrolladores Java Full Stack Jr. En el proceso, cada uno de nosotros colaboramos estrechamente bajo el marco de trabajo SCRUM y para el desarrollo Frontend se utilizaron tecnologías web como HTML, CSS y Javascript, con apoyo de Bootstrap.</p>
+                    <p>Su desarrollo se dio durante el bootcamp de Generation Mexico para convertirnos en Desarrolladores
+                        Java Full Stack Jr. En el proceso, cada uno de nosotros colaboramos estrechamente bajo el marco
+                        de trabajo SCRUM y para el desarrollo Frontend se utilizaron tecnologías web como HTML, CSS y
+                        Javascript, con apoyo de Bootstrap.</p>
                     <p>A continuación, los integrantes del equipo desarrollador nos presentamos.</p>
-                    
+
                 </div>
             </div>
             <!-- ========== contenedor de biografías =========== -->
@@ -102,9 +103,9 @@
                     <div class="col" style="margin-bottom: 1rem;">
                         <div class="card card__team">
                             <div style="text-align: center;">
-                                <img src="src/img/nosotros/AlexisSanchez.jpeg"
+                                <img src="./src/img/nosotros/AlexisSanchez.jpeg"
                                     style="width: 150px; height: 150px; margin-top: 1rem;box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.1);"
-                                    class="img-fluid rounded" alt="...">
+                                    class="img-fluid rounded" alt="Alexis">
                             </div>
                             <div class="card-body">
                                 <div class="nombre__integrante">
@@ -124,9 +125,9 @@
                     <div class="col" style="margin-bottom: 1rem;">
                         <div class="card card__team">
                             <div style="text-align: center;">
-                                <img src="src/img/nosotros/BryanMartinez.jpeg"
+                                <img src="./src/img/nosotros/BryanMartinez.jpeg"
                                     style="width: 150px; height: 150px; margin-top: 1rem;box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.1);"
-                                    class="img-fluid rounded" alt="...">
+                                    class="img-fluid rounded" alt="Bryan">
                             </div>
                             <div class="card-body">
                                 <div class="nombre__integrante">
@@ -146,9 +147,9 @@
                     <div class="col" style="margin-bottom: 1rem;">
                         <div class="card card__team">
                             <div style="text-align: center;">
-                                <img src="src/img/nosotros/JuanCarlos.jpeg"
+                                <img src="./src/img/nosotros/JuanCarlos.jpeg"
                                     style="width: 150px; height: 150px; margin-top: 1rem;box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.1);"
-                                    class="img-fluid rounded" alt="...">
+                                    class="img-fluid rounded" alt="Carlos">
                             </div>
                             <div class="card-body">
                                 <div class="nombre__integrante">
@@ -169,9 +170,9 @@
                     <div class="col" style="margin-bottom: 1rem;">
                         <div class="card card__team">
                             <div style="text-align: center;">
-                                <img src="src/img/nosotros/CarlosZepeda.jpeg"
+                                <img src="./src/img/nosotros/CarlosZepeda.jpeg"
                                     style="width: 150px; height: 150px; margin-top: 1rem;box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.1);"
-                                    class="img-fluid rounded" alt="...">
+                                    class="img-fluid rounded" alt="Ignacio">
                             </div>
                             <div class="card-body">
                                 <div class="nombre__integrante">
@@ -192,9 +193,9 @@
                     <div class="col" style="margin-bottom: 1rem;">
                         <div class="card card__team">
                             <div style="text-align: center;">
-                                <img src="src/img/nosotros/JuanAristeo.jpeg"
+                                <img src="./src/img/nosotros/JuanAristeo.jpeg"
                                     style="width: 150px; height: 150px; margin-top: 1rem;box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.1);"
-                                    class="img-fluid rounded" alt="...">
+                                    class="img-fluid rounded" alt="Luis">
                             </div>
                             <div class="card-body">
                                 <div class="nombre__integrante">
@@ -214,9 +215,9 @@
                     <div class="col" style="margin-bottom: 1rem;">
                         <div class="card card__team">
                             <div style="text-align: center;">
-                                <img src="src/img/nosotros/RobertoRivas.jpeg"
+                                <img src="./src/img/nosotros/RobertoRivas.jpeg"
                                     style="width: 150px; height: 150px; margin-top: 1rem;box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.1);"
-                                    class="img-fluid rounded" alt="...">
+                                    class="img-fluid rounded" alt="Roberto">
                             </div>
                             <div class="card-body">
                                 <div class="nombre__integrante">
@@ -245,16 +246,15 @@
             <footer class="footerFinal col-md-5 offset-md-5">
                 <ul class="footerFinal col-md-4 justify-content-center list-unstyled d-flex">
                     <li class="footerFinal ms-3"><a class="footerFinal text-body" href="#"><img class="footerFinal"
-                                id="facebookLogo" src="src/img/facebookLogo.png" alt="faecbookLogo"></a>
+                                id="facebookLogo" src="./src/img/logos/facebookLogo.png" alt="facebookLogo"></a>
                     <li class="footerFinal ms-3"><a class="footerFinal text-body" href="#"><img class="footerFinal"
-                                id="twitterLogo" src="src/img/twitterLogo.png" alt="twitterLogo"></a></li>
+                                id="twitterLogo" src="./src/img/logos/twitterLogo.png" alt="twitterLogo"></a></li>
                     <li class="footerFinal ms-3"><a class="footerFinal text-body" href="#"><img class="footerFinal"
-                                id="instagramLogo" src="src/img/instagramLogo.png" alt="instagramlogo"></a></li>
+                                id="instagramLogo" src="./src/img/logos/instagramLogo.png" alt="instagramlogo"></a></li>
                 </ul>
             </footer>
         </div>
         <!--FOOTER-->
-
 
         <!--Funcionalidad Menu de Hamburguesa-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
