--- a/contacto.html
+++ b/contacto.html
@@ -101,7 +101,7 @@
                     </div>
                   </div>
                   <div class="col colForm">
-                    
+                    <h1 style="text-align: center;">Cuentanos sobre ti</h1>
                     <div class="alert alert-danger fade show" style="display:none;"
                                                  role="alert" id="alertValidaciones">
                         <p id="alertValidacionesTexto"></p>
@@ -180,6 +180,11 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
             crossorigin="anonymous"></script>
+
+            <!--Script main.js-->
+            <script src="./js/main.js"></script>
+
+            <!--Script mailJS-->
 </body>
 
 </html>
