--- a/contacto.html
+++ b/contacto.html
@@ -1,81 +1,23 @@
-
 <!doctype html>
 <html lang="en">
 
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Acerca de Nosotros</title>
+    <title>Inicio</title>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Georama&family=Koulen&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="./css/main.css">
 </head>
 
 
 <body>
     <!-- ================= NAVBAR ============== -->
-    <header>
-        <nav class="navbar navbar-expand-lg custom-navbar" aria-label="Fifth navbar example">
-            <div class="container-fluid ">
-                <a class="navbar-brand " href="#"><img src="./src/img/logos/komitl.png" alt="Kotomitl"></a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#navbarsExample05" aria-controls="navbarsExample05" aria-expanded="true"
-                    aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-
-                <div class="collapse navbar-collapse" id="navbarsExample05">
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                        <li class="nav-item">
-                            <a class="nav-link" aria-current="page" href="">Inicio</a>
-                        </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown"
-                                aria-expanded="false">Productos</a>
-                            <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="#">Hombres</a></li>
-                                <li><a class="dropdown-item" href="#">Mujeres</a></li>
-                                <li><a class="dropdown-item" href="#">Niños</a></li>
-                            </ul>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="./nosotros.html">Nosotros</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="./contacto.html">Contacto</a>
-                        </li>
-                    </ul>
-                    <div class="iconoSuperior">
-                        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                            <li class="nav-item">
-                                <a class="nav-link" href="#"><img src="./src/img/logos/IconoUsuario.png"
-                                        alt="IconoUsuario" width="35px" height="35px"></a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#"><img src="./src/img/logos/iconoBusqueda.png"
-                                        alt="iconoBusqueda" width="35px" height="35px"></a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#"><img src="./src/img/logos/corazonLogo.png"
-                                        alt="corazonLogo" width="35px" height="35px"></a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#"><img src="./src/img/logos/IconoCarrito.png"
-                                        alt="IconoCarrito" width="35px" height="35px"></a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#"><strong>0/MXN</strong></a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-        </nav>
-        </div>
-    </header>
+    <header id="navbar"></header>
 
     <!-- ================= CONTENIDO ============== -->
     <main>
@@ -179,44 +121,19 @@
             </div>
             <!--aqui termina la seccion-->
 
+</section>
+    </main>
 
-        </section>
+    <!-- ================= FOOTER ============== -->
+    <div class="footerFinal" id="footer"></div>
 
+    <!--Funcionalidad Menu de Hamburguesa-->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
+        crossorigin="anonymous"></script>
 
-
-
-
-        <!--FOOTER-->
-
-        <div class="footerFinal" id="footer">
-            <footer class="footerFinal col-md-5 offset-md-5">
-                <ul class="footerFinal col-md-4 justify-content-center list-unstyled d-flex">
-                    <li class="footerFinal ms-3"><a class="footerFinal text-body" href="#"><img class="footerFinal"
-                                id="facebookLogo" src="./src/img/logos/facebookLogo.png" alt="facebookLogo"></a>
-                    <li class="footerFinal ms-3"><a class="footerFinal text-body" href="#"><img class="footerFinal"
-                                id="twitterLogo" src="./src/img/logos/twitterLogo.png" alt="twitterLogo"></a></li>
-                    <li class="footerFinal ms-3"><a class="footerFinal text-body" href="#"><img class="footerFinal"
-                                id="instagramLogo" src="./src/img/logos/instagramLogo.png" alt="instagramlogo"></a></li>
-                </ul>
-            </footer>
-        </div>
-        <!--FOOTER-->
-
-        <!--Funcionalidad Menu de Hamburguesa-->
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
-            crossorigin="anonymous"></script>
-
-        <!--Script main.js-->
-        <script src="./js/main.js"></script>
-
-        <!--Script mailJS-->
-
-        <!--==========SCRIPT PARA EL ENVIO DE EMAILS ================-->
-       
-        
-
-        <!--==========TERMINA SCRIPT PARA EL ENVIO DE EMAILS ================-->
+    <!---JS Nabvar & Footer--->
+    <script src="./js/navfooter.js"></script>
 </body>
 
 </html>
