--- a/nosotros.html
+++ b/nosotros.html
@@ -17,64 +17,7 @@
 
 <body>
     <!-- ================= NAVBAR ============== -->
-    <header>
-        <nav class="navbar navbar-expand-lg custom-navbar" aria-label="Fifth navbar example">
-            <div class="container-fluid ">
-                <a class="navbar-brand " href="#"><img src="./src/img/logos/komitl.png" alt="Kotomitl"></a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#navbarsExample05" aria-controls="navbarsExample05" aria-expanded="true"
-                    aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-
-                <div class="collapse navbar-collapse" id="navbarsExample05">
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                        <li class="nav-item">
-                            <a class="nav-link" aria-current="page" href="#">Inicio</a>
-                        </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown"
-                                aria-expanded="false">Productos</a>
-                            <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="#">Hombres</a></li>
-                                <li><a class="dropdown-item" href="#">Mujeres</a></li>
-                                <li><a class="dropdown-item" href="#">Niños</a></li>
-                            </ul>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="./nosotros.html">Nosotros</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="./contacto.html">Contacto</a>
-                        </li>
-                    </ul>
-                    <div class="iconoSuperior">
-                        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                            <li class="nav-item">
-                                <a class="nav-link" href="#"><img src="./src/img/logos/IconoUsuario.png"
-                                        alt="IconoUsuario" width="35px" height="35px"></a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#"><img src="./src/img/logos/iconoBusqueda.png"
-                                        alt="iconoBusqueda" width="35px" height="35px"></a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#"><img src="./src/img/logos/corazonLogo.png"
-                                        alt="corazonLogo" width="35px" height="35px"></a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#"><img src="./src/img/logos/IconoCarrito.png"
-                                        alt="IconoCarrito" width="35px" height="35px"></a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#"><strong>0/MXN</strong></a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-        </nav>
-        </div>
-    </header>
+    <header id="navbar"></header>
 
     <!-- ================= CONTENIDO ============== -->
     <main>
@@ -87,7 +30,8 @@
                 <div class="card-body">
                     <p>Este proyecto es un e-commerce enfocado a la venta de vestimenta para personas con gusto y
                         apreciación de lo artesanal.</p>
-                    <p>Su desarrollo se dio durante el bootcamp de Generation Mexico para convertirnos en Desarrolladores
+                    <p>Su desarrollo se dio durante el bootcamp de Generation Mexico para convertirnos en
+                        Desarrolladores
                         Java Full Stack Jr. En el proceso, cada uno de nosotros colaboramos estrechamente bajo el marco
                         de trabajo SCRUM y para el desarrollo Frontend se utilizaron tecnologías web como HTML, CSS y
                         Javascript, con apoyo de Bootstrap.</p>
@@ -130,7 +74,7 @@
                             </div>
                             <div class="card-body">
                                 <div class="nombre__integrante">
-                                    <span>Bryan Alexis Martínez Alvarado</span>
+                                    <span>Bryan Alexis</span>
                                 </div>
                                 <div class="profesion__integrante">
                                     <span>Desarrollador Java | Ing. en Sistemas Computacionales</span>
@@ -235,30 +179,18 @@
                 </div>
             </div>
         </section>
+    </main>
 
+    <!-- ================= FOOTER ============== -->
+    <div class="footerFinal" id="footer"></div>
 
+    <!--Funcionalidad Menu de Hamburguesa-->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
+        crossorigin="anonymous"></script>
 
-
-        <!--FOOTER-->
-
-        <div class="footerFinal" id="footer">
-            <footer class="footerFinal col-md-5 offset-md-5">
-                <ul class="footerFinal col-md-4 justify-content-center list-unstyled d-flex">
-                    <li class="footerFinal ms-3"><a class="footerFinal text-body" href="#"><img class="footerFinal"
-                                id="facebookLogo" src="./src/img/logos/facebookLogo.png" alt="facebookLogo"></a>
-                    <li class="footerFinal ms-3"><a class="footerFinal text-body" href="#"><img class="footerFinal"
-                                id="twitterLogo" src="./src/img/logos/twitterLogo.png" alt="twitterLogo"></a></li>
-                    <li class="footerFinal ms-3"><a class="footerFinal text-body" href="#"><img class="footerFinal"
-                                id="instagramLogo" src="./src/img/logos/instagramLogo.png" alt="instagramlogo"></a></li>
-                </ul>
-            </footer>
-        </div>
-        <!--FOOTER-->
-
-        <!--Funcionalidad Menu de Hamburguesa-->
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
-            crossorigin="anonymous"></script>
+    <!---JS Nabvar & Footer--->
+    <script src="./js/navfooter.js"></script>
 </body>
 
 </html>
