filtro del catálogo estilizado

--- a/productos.html
+++ b/productos.html
@@ -38,7 +38,7 @@
           </div>
         </div>
         <div class="col-md-10">
-          <h1 class="titulo-catalogo">Catalogo</h1>
+          <h1 class="titulo-catalogo">Catálogo</h1>
           <div id="main__prods" class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-xl-4 g-6">
 
           </div>
