estandariza etiquetas de cards

--- a/nosotros.html
+++ b/nosotros.html
@@ -54,10 +54,10 @@
                                     class="img-fluid rounded" alt="Alexis">
                             </div>
                             <div class="card-body">
-                                <div class="nombre__integrante">
+                                <div class="title__card">
                                     <span>Alexis Sánchez León</span>
                                 </div>
-                                <div class="profesion__integrante">
+                                <div class="subtitle__card">
                                     <span>Desarrollador Java | Ing. Industrial</span>
                                 </div>
                                 <p class="card-text" style="text-align: justify;">Soy un desarrollador Java, enfocado en
@@ -76,10 +76,10 @@
                                     class="img-fluid rounded" alt="Bryan">
                             </div>
                             <div class="card-body">
-                                <div class="nombre__integrante">
+                                <div class="title__card">
                                     <span>Bryan Alexis</span>
                                 </div>
-                                <div class="profesion__integrante">
+                                <div class="subtitle__card">
                                     <span>Desarrollador Java | Ing. en Sistemas Computacionales</span>
                                 </div>
                                 <p class="card-text" style="text-align: justify;">Apasionado por la tecnología y por el
@@ -98,10 +98,10 @@
                                     class="img-fluid rounded" alt="Carlos">
                             </div>
                             <div class="card-body">
-                                <div class="nombre__integrante">
+                                <div class="title__card">
                                     <span>Carlos Bernal</span>
                                 </div>
-                                <div class="profesion__integrante">
+                                <div class="subtitle__card">
                                     <span>Desarrollador Java | Ing. en Sistemas Computacionales</span>
                                 </div>
                                 <p class="card-text" style="text-align: justify;">Entusiasta por la tecnología y
@@ -121,10 +121,10 @@
                                     class="img-fluid rounded" alt="Ignacio">
                             </div>
                             <div class="card-body">
-                                <div class="nombre__integrante">
+                                <div class="title__card">
                                     <span>Ignacio Zepeda</span>
                                 </div>
-                                <div class="profesion__integrante">
+                                <div class="subtitle__card">
                                     <span>Desarrollador Java | Ing. Ambiental</span>
                                 </div>
                                 <p class="card-text" style="text-align: justify;">Busco optimizar y automatizar procesos
@@ -144,10 +144,10 @@
                                     class="img-fluid rounded" alt="Luis">
                             </div>
                             <div class="card-body">
-                                <div class="nombre__integrante">
+                                <div class="title__card">
                                     <span>J. Luis Cruz</span>
                                 </div>
-                                <div class="profesion__integrante">
+                                <div class="subtitle__card">
                                     <span>Desarrollador Java | Ing. en Mecatrónica</span>
                                 </div>
                                 <p class="card-text" style="text-align: justify;">
@@ -166,10 +166,10 @@
                                     class="img-fluid rounded" alt="Roberto">
                             </div>
                             <div class="card-body">
-                                <div class="nombre__integrante">
+                                <div class="title__card">
                                     <span>Roberto Rivas</span>
                                 </div>
-                                <div class="profesion__integrante">
+                                <div class="subtitle__card">
                                     <span>Desarrollador Java | Ing. Biomédico</span>
                                 </div>
                                 <p class="card-text" style="text-align: justify;">
