texto estilizado del contenido para visualizarlo

--- a/contacto.html
+++ b/contacto.html
@@ -29,36 +29,23 @@
             <div class="container text-center">
                 <div class="row">
                     <div class="col">
-                        <h1>Contactanos</h1>
-                        <p class="inf-contact">Información</p>
-                        <p class="dir-contact"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
-                                fill="currentColor" class="bi bi-geo-fill" viewBox="0 0 16 16">
-                                <path fill-rule="evenodd"
-                                    d="M4 4a4 4 0 1 1 4.5 3.969V13.5a.5.5 0 0 1-1 0V7.97A4 4 0 0 1 4 3.999zm2.493 8.574a.5.5 0 0 1-.411.575c-.712.118-1.28.295-1.655.493a1.319 1.319 0 0 0-.37.265.301.301 0 0 0-.057.09V14l.002.008a.147.147 0 0 0 .016.033.617.617 0 0 0 .145.15c.165.13.435.27.813.395.751.25 1.82.414 3.024.414s2.273-.163 3.024-.414c.378-.126.648-.265.813-.395a.619.619 0 0 0 .146-.15.148.148 0 0 0 .015-.033L12 14v-.004a.301.301 0 0 0-.057-.09 1.318 1.318 0 0 0-.37-.264c-.376-.198-.943-.375-1.655-.493a.5.5 0 1 1 .164-.986c.77.127 1.452.328 1.957.594C12.5 13 13 13.4 13 14c0 .426-.26.752-.544.977-.29.228-.68.413-1.116.558-.878.293-2.059.465-3.34.465-1.281 0-2.462-.172-3.34-.465-.436-.145-.826-.33-1.116-.558C3.26 14.752 3 14.426 3 14c0-.599.5-1 .961-1.243.505-.266 1.187-.467 1.957-.594a.5.5 0 0 1 .575.411z">
-                                </path>
-                            </svg> Oaxaca 26, Centro, Dolores Hidalgo,Guanajuato</p>
-                        <p class="tel-contact"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
-                                fill="currentColor" class="bi bi-telephone-fill" viewBox="0 0 16 16">
-                                <path fill-rule="evenodd"
-                                    d="M1.885.511a1.745 1.745 0 0 1 2.61.163L6.29 2.98c.329.423.445.974.315 1.494l-.547 2.19a.678.678 0 0 0 .178.643l2.457 2.457a.678.678 0 0 0 .644.178l2.189-.547a1.745 1.745 0 0 1 1.494.315l2.306 1.794c.829.645.905 1.87.163 2.611l-1.034 1.034c-.74.74-1.846 1.065-2.877.702a18.634 18.634 0 0 1-7.01-4.42 18.634 18.634 0 0 1-4.42-7.009c-.362-1.03-.037-2.137.703-2.877L1.885.511z" />
-                            </svg> +524181102062</p>
-                        <p class="email-contact" href="mailto: ventas@kotomitl.com"><svg
-                                xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                                class="bi bi-envelope-fill" viewBox="0 0 16 16">
-                                <path
-                                    d="M.05 3.555A2 2 0 0 1 2 2h12a2 2 0 0 1 1.95 1.555L8 8.414.05 3.555ZM0 4.697v7.104l5.803-3.558L0 4.697ZM6.761 8.83l-6.57 4.027A2 2 0 0 0 2 14h12a2 2 0 0 0 1.808-1.144l-6.57-4.027L8 9.586l-1.239-.757Zm3.436-.586L16 11.801V4.697l-5.803 3.546Z" />
-                            </svg> ventas@kotomitl.com</p>
+                        
+                        <h1>Contáctenos</h1>
+                        <!--Info contacto-->
+                        <div class="inf-contact">
+                            <span>Información</span>
+                            <p> <i class="bi bi-geo-fill icon__contacto"></i> Oaxaca 26, Centro, Dolores Hidalgo, Guanajuato, México.</p>
+                            <p><i class="bi bi-telephone-fill icon__contacto"></i>(+52) 41 81 10 20 62</p>
+                            <p><i class="bi bi-envelope-fill icon__contacto"></i>ventas@kotomitl.com</p>
+                        </div>
 
                         <div class="maps">
-                            <iframe
-                                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3720.8272010292694!2d-100.93749478506517!3d21.15927398592777!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x842b3fa9def5bc27%3A0x5af5e12e7f481a3e!2sOaxaca%2026%2C%20Centro%2C%2037800%20Dolores%20Hidalgo%20Cuna%20de%20la%20Independencia%20Nacional%2C%20Gto.!5e0!3m2!1ses-419!2smx!4v1690227695897!5m2!1ses-419!2smx"
-                                style="border:0;" allowfullscreen="" loading="lazy"
-                                referrerpolicy="no-referrer-when-downgrade"></iframe>
+                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3720.8270754170117!2d-100.93788102504558!3d21.15927898328351!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x842b3fa9def5bc27%3A0x5af5e12e7f481a3e!2sOaxaca%2026%2C%20Centro%2C%2037800%20Dolores%20Hidalgo%20Cuna%20de%20la%20Independencia%20Nacional%2C%20Gto.!5e0!3m2!1ses-419!2smx!4v1691083849483!5m2!1ses-419!2smx" width="450" height="250" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                         </div>
                     </div>
                     <!--=================== FORMULARIO DE CONTACTO ===============-->
                     <div class="col colForm">
-                        <h1 style="text-align: center;">Cuentanos sobre ti</h1>
+                        <h1 style="text-align: center;">Cuéntanos sobre ti</h1>
                         <div class="alert alert-danger fade show" style="display:none;" role="alert"
                             id="alertValidaciones">
                             <p id="alertValidacionesTexto"></p>
@@ -108,11 +95,13 @@
                             </div>
 
                             <div class="d-grid gap-2 col-6 mx-auto">
-                                <input type="submit" class="btn btn-warning" id="btnEnviar"
-                                    style="margin-bottom: 10rem;" value="Enviar">
+                                <!-- <input type="submit" class="btn btn-warning" id="btnEnviar"
+                                    style="margin: 2rem 0 2rem 0;" value="Enviar"> -->
+                                    <button type="button" class="btn btn-warning" id="btnEnviar"><i class="bi bi-send"></i> Enviar </button>
                             </div>
 
-                            <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
+                            <script type="text/javascript"
+                                src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
 
                             <script type="text/javascript">
                                 emailjs.init("SoLWovVxSmmjDXkRB");
@@ -124,7 +113,7 @@
             </div>
             <!--aqui termina la seccion-->
 
-</section>
+        </section>
     </main>
 
     <!-- ================= FOOTER ============== -->
