Se agrega footer en las card de nosotros con icons

--- a/nosotros.html
+++ b/nosotros.html
@@ -26,7 +26,7 @@
     <main>
         <section class="container">
             <div class="title">
-                <h1>Sobre este proyecto</h1>
+                <h1>Resumen</h1>
             </div>
             <!-- ============= Resumen del proyecto ================ -->
             <div class="card" style="margin-bottom: 1.5rem;">
@@ -38,11 +38,12 @@
                         Java Full Stack Jr. En el proceso, cada uno de nosotros colaboramos estrechamente bajo el marco
                         de trabajo SCRUM y para el desarrollo Frontend se utilizaron tecnologías web como HTML, CSS y
                         Javascript, con apoyo de Bootstrap.</p>
-                    <p>A continuación, los integrantes del equipo desarrollador nos presentamos.</p>
-
                 </div>
             </div>
             <!-- ========== contenedor de biografías =========== -->
+            <div class="title">
+                <h2>Equipo</h2>
+            </div>
             <div class="container">
                 <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-6">
                     <!-- 1 Alexis -->
@@ -63,6 +64,11 @@
                                 <p class="card-text" style="text-align: justify;">Soy un desarrollador Java, enfocado en
                                     el frontend y en la gestión de proyectos con el marco de trabajo SCRUM para la
                                     entrega de valor oportuna.</p>
+                            </div>
+                            <!-- redes sociales -->
+                            <div class="social__media card-footer ">
+                                <span><i class="bi bi-github social__media__icon"></i></span>
+                                <span><i class="bi bi-linkedin social__media__icon"></i></span>
                             </div>
                         </div>
                     </div>
@@ -85,6 +91,11 @@
                                 <p class="card-text" style="text-align: justify;">Apasionado por la tecnología y por el
                                     desarrollo de software con base en metodologías ágiles, aportando lo mejor de mí en
                                     cada proyecto.</p>
+                            </div>
+                            <!-- redes sociales -->
+                            <div class="social__media card-footer ">
+                                <span><i class="bi bi-github social__media__icon"></i></span>
+                                <span><i class="bi bi-linkedin social__media__icon"></i></span>
                             </div>
                         </div>
                     </div>
@@ -109,6 +120,11 @@
                                     activamente del trabajo en equipo.
                                 </p>
                             </div>
+                            <!-- redes sociales -->
+                            <div class="social__media card-footer ">
+                                <span><i class="bi bi-github social__media__icon"></i></span>
+                                <span><i class="bi bi-linkedin social__media__icon"></i></span>
+                            </div>
                         </div>
                     </div>
 
@@ -131,6 +147,11 @@
                                     con ayuda de la tecnología en sinergia con el framework SCRUM para potenciar los
                                     resultados.
                                 </p>
+                            </div>
+                            <!-- redes sociales -->
+                            <div class="social__media card-footer ">
+                                <span><i class="bi bi-github social__media__icon"></i></span>
+                                <span><i class="bi bi-linkedin social__media__icon"></i></span>
                             </div>
                         </div>
                     </div>
@@ -155,6 +176,11 @@
                                     habilidades en dirección de proyectos.
                                 </p>
                             </div>
+                            <!-- redes sociales -->
+                            <div class="social__media card-footer ">
+                                <span><i class="bi bi-github social__media__icon"></i></span>
+                                <span><i class="bi bi-linkedin social__media__icon"></i></span>
+                            </div>
                         </div>
                     </div>
                     <!-- 6 Roberto Rivas -->
@@ -177,6 +203,11 @@
                                     idiomas y tecnologías.
                                 </p>
                             </div>
+                            <!-- redes sociales -->
+                            <div class="social__media card-footer ">
+                                <span><i class="bi bi-github social__media__icon"></i></span>
+                                <span><i class="bi bi-linkedin social__media__icon"></i></span>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -186,7 +217,7 @@
 
     <!-- ================= FOOTER ============== -->
     <footer class="text-center text-lg-center justify-content-center d-flex" id="footer"></footer>
-    
+
     <!-- ================= JS ============== -->
     <!--Bootstrap-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
